--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "react": "^18.2.0",
     "react-big-calendar": "^1.5.2",
     "react-burger-menu": "^3.0.8",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.4.3"
   },
   "devDependencies": {
