--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-modal": "^3.16.1",
-    "react-router-dom": "^6.4.3"
+    "react-router-dom": "^6.4.3",
+    "sass": "^1.56.1",
+    "sweetalert2": "^11.6.15"
   },
   "devDependencies": {
     "@types/react": "^18.0.24",
