--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.1",
     "date-fns": "^2.29.3",
     "hamburger-react": "^2.5.0",
     "react": "^18.2.0",
@@ -18,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-modal": "^3.16.1",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
     "sass": "^1.56.1",
     "sweetalert2": "^11.6.15"
