--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.1",
+    "axios": "^1.2.0",
     "date-fns": "^2.29.3",
     "hamburger-react": "^2.5.0",
     "react": "^18.2.0",
