--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
     "@reduxjs/toolkit": "^1.9.1",
     "axios": "^1.2.1",
     "date-fns": "^2.29.3",
@@ -22,6 +23,7 @@
     "react-modal": "^3.16.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
+    "react-spinners": "^0.13.7",
     "sass": "^1.56.1",
     "sweetalert2": "^11.6.15"
   },
